unpackaged/main/default/objects/Technician_Service_Type_Member__c/Technician_Service_Type_Member__c.object-meta.xml
<CustomObject>
    <label>Technician Service Type Member</label>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>Service Type Member Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Technician Service Type Members</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>