unpackaged/main/default/objects/Technician_Service_Type_Member__c/fields/Compound_Key__c.field-meta.xml
<CustomField>
    <fullName>Compound_Key__c</fullName>
    <label>Compound Key</label>
    <length>255</length>
    <type>Text</type>
</CustomField>