unpackaged/main/default/objects/Technician_Service_Type_Member__c/fields/Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Service_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Type</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Service_Type__c.RecordType.DeveloperName</field>
            <operation>equals</operation>
            <value>Service_Type</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Service_Type__c</referenceTo>
    <relationshipLabel>Technician Service Type Members</relationshipLabel>
    <relationshipName>Service_Type_Members</relationshipName>
    <type>Lookup</type>
</CustomField>