unpackaged/main/default/objects/Technician_Service_Type_Member__c/fields/Technician__c.field-meta.xml
<CustomField>
    <fullName>Technician__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Technician</label>
    <referenceTo>ServiceResource</referenceTo>
    <relationshipLabel>Technician Service Type Members</relationshipLabel>
    <relationshipName>Service_Type_Members</relationshipName>
    <type>Lookup</type>
</CustomField>