unpackaged/main/default/objects/Technician_Service_Type_Member__c/recordTypes/Technician.recordType-meta.xml
<RecordType>
    <fullName>Technician</fullName>
    <active>true</active>
    <label>Technician</label>
</RecordType>