unpackaged/main/default/objects/Technician_Service_Type_Member__c/validationRules/Only_Add_Service_Types.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Add_Service_Types</fullName>
    <active>true</active>
    <errorConditionFormula>Service_Type__r.RecordType.Name != &#39;Service Type&#39;</errorConditionFormula>
    <errorMessage>You can only add Service Types to a Technicians profile. Please Select a valid ServiceType.</errorMessage>
</ValidationRule>